@@ -218,6 +218,17 @@ module Druid
     end
   end
 
+  #
+  # Override the normal showModalDialog call is it opens a window instead of a dialog.
+  # You will need to attach to the new window in order to continue.
+  #
+  # @example
+  #   @page.modal_dialog do
+  #     @page.action_that_spawns_the_modal
+  #   end
+  #
+  # @param block a block that contains the call that will cause the modal dialog.
+  #
   def modal_dialog(&block)
     script =
     %Q{
@@ -228,7 +239,7 @@ module Druid
       }
     }
     driver.execute_script script
-    yield
+    yield if block_given?
   end
 
   def call_block(&block)
